--- a/Project1/app/src/main/res/values/strings.xml
+++ b/Project1/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="RIGHT">RIGHT</string>
     <!--    Direction   -->
 
+    <string name="game_name">GAME</string>
+    <string name="play_button">PLAY</string>
+    <string name="score_button">SCORE</string>
+
 </resources>
