--- a/Project1/app/src/main/res/values/strings.xml
+++ b/Project1/app/src/main/res/values/strings.xml
@@ -20,4 +20,6 @@
     <string name="apple_ui">Apple UI</string>
     <string name="game_frame_ui">Game Frame UI</string>
 
+    <string name="resetData">Reset Data</string>
+
 </resources>
